# homework_technopark

./: CMakeLists.txt  README copy.md  README.md
include/: consistent_count.h  matrix.h  parallel_count.h  project_info.h
src/: consistent_count.c  main.c  matrix.c  parallel_count.c  project_info.c  tests.cpp
test/: a.out  file.c  stress_test.c  tests.cpp
workflows/: ci.yml
